# matire-d-mcp

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.ai/: AGENTS.md  ENGINEERING-STANDARDS.md
docs/adr/: 001-epic08-resilience-decisions.md  002-opentable-client-rewrite.md  003-restaurant-wishlist.md  004-remote-hosting.md
docs/specs/: ARCHITECTURE_PLAN.md  EPIC-01-PROJECT-FOUNDATION.md  EPIC-02-DATA-LAYER.md  EPIC-03-USER-PREFERENCES.md  EPIC-04-RESTAURANT-DISCOVERY.md  EPIC-05-RESY-INTEGRATION.md  EPIC-06-OPENTABLE-INTEGRATION.md  EPIC-07-INTELLIGENCE-LAYER.md  EPIC-08-RESILIENCE-AND-PRODUCTION.md  EPICS-INDEX.md  RESEARCH.MD  remote-hosting.md
scripts/: lint.sh  test.sh  validate.sh
src/: __main__.py  auth.py  config.py  server.py  setup.py
src/clients/: cache.py  calendar.py  cuisine_mapper.py  distance.py  geocoding.py  google_places.py  opentable.py  resilience.py  resy.py  resy_auth.py  weather.py
src/matching/: venue_matcher.py
src/models/: __init__.py  enums.py  reservation.py  restaurant.py  review.py  user.py  wishlist.py
src/storage/: __init__.py  config_store.py  credentials.py  database.py  schema.sql
src/tools/: blacklist.py  booking.py  costs.py  date_utils.py  error_messages.py  groups.py  history.py  people.py  preferences.py  recommendations.py  search.py  wishlist.py
tests/: conftest.py  factories.py  test_auth.py  test_config.py  test_server.py  test_setup.py
tests/clients/: test_cache.py  test_calendar.py  test_cuisine_mapper.py  test_distance.py  test_geocoding.py  test_google_places.py  (+5 more)
(+24 files in other folders)
